2005-03-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/input.c (getline): Removed.  Was just a minimally simplified
	copy of mygetline() anyway, and it threatened to collide with a
	like-named routine in libc.
	
	* src/global.h (getline): Removed prototype.

 	* src/command.c (command): Changed all calls of getline() to
	mygetline() with an empty string as the first argument.

	* src/egrep.y (memset): Changed #if condition around fallback
	implementation to match that of the prototype in global.h.  Should
	fix SF bug #1163104 (build failure on FreeBSD).

2005-02-16  Neil Horman  <nhorman@gmail.com>

	* src/command.c (command): Added ifdef KEY_RESIZE around
	KEY_RESIZE case in switch statement to allow curses
	libraries which don't support resize events to build

	* src/main.c (main): Added ifdef KEY_RESIZE around 
	SIGWINCH handler and signal registration logic to
	remove resize code from cscope when building with
	curses libraries that don't support resize events

2005-02-04  Neil Horman  <nhorman@gmail.com>

	* src/command.c (command): Added KEY_RESIZE event case to 
	command switch to handle window re-drawing when a resize 
	event was received.

	* src/input.c (mygetch): Added error checking of return code
	to restart call to getch in the event it returned early due
	to a signal being delivered.

	* src/main.c (main): Registered a signal handler for the 
	SIGWINCH handler which is delivered when a terminal is 
	resized.  Handler pushes a KEY_RESIZE event onto the head 
	of the command input queue.

2005-02-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/build.c (build): Keep interactive mode on, even if on a
	terminal, if verbose mode (-v) was turned on.

2005-01-31  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/scanner.h: Declare yytext signed on AIX (without stating a
	version number, for now).

2005-01-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
